Fixed the click problem
Fixed the click problem, I changed the creation of the element, created it with .createElement ("div") and then added the classes as desired. For the click I have created an external function that manages the color, so that in the future it will be easier to access it.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,37 @@
-.box{
-   width: 500px;
-   height: 500px;
-   display: flex;
-   flex-flow: wrap;
+.box {
+    width: 500px;
+    height: 500px;
+    display: flex;
+    flex-flow: wrap;
 }
-.cell{
+
+.active {
+    background-color: cornflowerblue;
+}
+
+.cel-box-10 {
+    width: 10%;
     border: 1px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: black;
 }
 
-.cell-box-10{
-    width: 10%;
-}
-.cell-box-9{
+.cel-box-9 {
     width: calc(100% / 9);
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
 }
-.cell-box-7{
+
+.cel-box-7 {
     width: calc(100% / 7);
+    border: 1px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
 }
